name:                sign-pss-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wangbj/sign-pss-test#readme
license:             BSD3
license-file:        LICENSE
author:              Baojun Wang
maintainer:          wangbj@gmail.com
copyright:           Baojun Wang
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     OpenSSL
                     , PrivateKey
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10 && < 1
                     , mtl >= 2.2 && < 3
                     , cryptonite >= 0.23 && < 1
                     , pem >= 0.2 && < 1
                     , memory >= 0.13 && < 1
                     , x509 >= 1.6.5 && < 2
                     , x509-validation >= 1.6.2 && < 2
                     , x509-store >= 1.6.2 && < 2
                     , QuickCheck >= 2.9 && < 3
                     , process >= 1.4 && < 2
                     , directory >= 1.3 && < 2
                     , unix >= 2.7 && < 3
                     , HsOpenSSL >= 0.11 && < 1
                     , crypto-pubkey-types >= 0.4 && < 1
                     , crypto-pubkey-openssh >= 0.2 && < 1
                     , asn1-parse >= 0.9.4 && < 1
                     , asn1-encoding >= 0.9.0 && < 1
                     , asn1-types >= 0.3.0 && < 1
  default-language:    Haskell2010

executable sign-pss-test-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring >= 0.10 && < 1
                     , mtl >= 2.2 && < 3
                     , cryptonite >= 0.23 && < 1
                     , pem >= 0.2 && < 1
                     , memory >= 0.13 && < 1
                     , x509 >= 1.6.5 && < 2
                     , x509-validation >= 1.6.2 && < 2
                     , x509-store >= 1.6.2 && < 2
                     , QuickCheck >= 2.9 && < 3
                     , process >= 1.4 && < 2
                     , directory >= 1.3 && < 2
                     , unix >= 2.7 && < 3
                     , sign-pss-test
  default-language:    Haskell2010

test-suite pss-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring >= 0.10 && < 1
                     , mtl >= 2.2 && < 3
                     , cryptonite >= 0.23 && < 1
                     , pem >= 0.2 && < 1
                     , memory >= 0.13 && < 1
                     , x509 >= 1.6.5 && < 2
                     , x509-validation >= 1.6.2 && < 2
                     , x509-store >= 1.6.2 && < 2
                     , QuickCheck >= 2.9 && < 3
                     , process >= 1.4 && < 2
                     , directory >= 1.3 && < 2
                     , unix >= 2.7 && < 3
                     , sign-pss-test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wangbj/sign-pss-test
